# FoundationTS

./: README.md  pyproject.toml
data/: convert_dataset_to_bin.py  download_data.py
docs/: data.md  experiment_plan.md  perf_tuning_data.md  proflie_training.md  sdpa_mask_bug_notes.md
scripts/: analyze_failed_batch.py  benchmark_windowed.py  lambda_startup.sh  repro_failed_batch.py
src/foundation_ts/: cli.py
src/foundation_ts/dataset/: __init__.py  build.py  concat.py  sources.py  types.py  utils.py  windowed.py
src/foundation_ts/models/: __init__.py
src/foundation_ts/models/training/: __init__.py  config.py  loop.py  utils.py
src/foundation_ts/models/tsmoe/: __init__.py  layers.py  model.py  stats.py
tests/: test_cli.py
tests/dataset/: test_datasets.py
tests/models/: test_moe.py  test_train.py
