[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "foundationts"
version = "0.1.0"
description = "Foundation models for time series"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

scripts = { mypy-clean = "foundation_ts.scripts:run_mypy", foundationts = "foundation_ts.cli:main" }

dependencies = ["numpy", "torch", "pyyaml", "huggingface_hub", "tensorboard"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
# warn_unused_ignores = true
# warn_redundant_casts = true
# warn_unused_configs = true
# check_untyped_defs = true
# ignore_missing_imports = true
# show_error_codes = true
# follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]

[tool.ruff]
target-version = "py312"
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.hatch.envs.default]
dependencies = [
    "numpy",
    "torch",
    "pyyaml",
    "huggingface_hub",
    "tensorboard",
    "pytest",
    "ruff",
    "mypy",
]

[tool.hatch.envs.default.scripts]
train = "python src/foundation_ts/models/train.py train --dataset-path {args:}"
tests = "pytest"
lint = "ruff check src tests"
typecheck = "mypy src"
